# srec

./: .gitignore  CMakeLists.txt  README.md  bin2srec.cpp  srec2bin.cpp  sreccheck.cpp
.github/workflows/: build-and-test.yml
cmake/: srecConfig.cmake.in
srec/: CMakeLists.txt  crc32.h  srec.cpp  srec.h  srec_exceptions.h
test/: CMakeLists.txt  roundtrip_test.sh  test.cpp
